--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       TZ: Asia/Seoul
       MYSQL_USER: ourbox
       MYSQL_PASSWORD: ourbox
+      MYSQL_DATABASE: ourbox
       MYSQL_ROOT_PASSWORD: ourbox
     volumes:
       - ../ourbox-ultimate-docker/mysql/data:/var/lib/mysql
