feature: temp auth, user module

--- a/.env.temp
+++ b/.env.temp
@@ -12,7 +12,7 @@ CORS_ORIGIN = ^http://(localhost|127\.0\.0\.1|192\.168\.0\.1):\d{1,5}$
 # DB
 DB_HOST = 127.0.0.1
 DB_PORT = 33061
-DB_USERNAME = ourbox
+DB_USERNAME = root
 DB_PASSWORD = ourbox
 DB_DATABASE = ourbox
 DB_SYNCHRONIZE = true
