--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "decimal.js": "^10.4.3",
+    "exceljs": "^4.4.0",
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.5.0",
